--- a/HobbyHub/fillingdatapage.ui
+++ b/HobbyHub/fillingdatapage.ui
@@ -45,7 +45,7 @@
      <x>340</x>
      <y>50</y>
      <width>251</width>
-     <height>141</height>
+     <height>111</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -91,7 +91,7 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>150</y>
+     <y>170</y>
      <width>211</width>
      <height>41</height>
     </rect>
@@ -135,7 +135,7 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>200</y>
+     <y>210</y>
      <width>211</width>
      <height>41</height>
     </rect>
@@ -164,14 +164,14 @@
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_5">
     <item>
+     <widget class="QGraphicsView" name="photo"/>
+    </item>
+    <item>
      <widget class="QLabel" name="LoadThePhoto">
       <property name="text">
        <string>Load the photo</string>
       </property>
      </widget>
-    </item>
-    <item>
-     <widget class="QGraphicsView" name="photo"/>
     </item>
    </layout>
   </widget>
@@ -179,7 +179,7 @@
    <property name="geometry">
     <rect>
      <x>340</x>
-     <y>210</y>
+     <y>170</y>
      <width>251</width>
      <height>111</height>
     </rect>
@@ -214,7 +214,7 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>100</y>
+     <y>90</y>
      <width>211</width>
      <height>41</height>
     </rect>
@@ -236,7 +236,7 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>340</y>
+     <y>290</y>
      <width>211</width>
      <height>41</height>
     </rect>
@@ -258,129 +258,33 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>250</y>
+     <y>330</y>
      <width>211</width>
      <height>41</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_10">
     <item>
-     <widget class="QLabel" name="PhoneNumber">
+     <widget class="QLabel" name="ContactsLabel">
       <property name="text">
-       <string>Phone Number</string>
+       <string>Contacts</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="phonenumber"/>
-    </item>
-   </layout>
-  </widget>
-  <widget class="QWidget" name="layoutWidget_5">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>510</y>
-     <width>331</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <layout class="QHBoxLayout" name="horizontalLayout_6">
-    <item>
-     <widget class="QLabel" name="AgeOStrangers_2">
+     <widget class="QPushButton" name="BtnFillContacts">
       <property name="text">
-       <string>Age of strangers  </string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QSlider" name="ageofstrangers_2">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
-      <property name="mouseTracking">
-       <bool>true</bool>
-      </property>
-      <property name="tabletTracking">
-       <bool>true</bool>
-      </property>
-      <property name="acceptDrops">
-       <bool>true</bool>
-      </property>
-      <property name="autoFillBackground">
-       <bool>false</bool>
-      </property>
-      <property name="minimum">
-       <number>18</number>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="invertedControls">
-       <bool>false</bool>
-      </property>
-      <property name="tickPosition">
-       <enum>QSlider::NoTicks</enum>
+       <string>Fill contacts</string>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="layoutWidget_10">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>570</y>
-     <width>331</width>
-     <height>41</height>
-    </rect>
-   </property>
-   <layout class="QHBoxLayout" name="horizontalLayout_11">
-    <item>
-     <widget class="QLabel" name="FoundRadius_2">
-      <property name="text">
-       <string>Foundation radius</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QSlider" name="foundationradius_2">
-      <property name="enabled">
-       <bool>true</bool>
-      </property>
-      <property name="mouseTracking">
-       <bool>true</bool>
-      </property>
-      <property name="tabletTracking">
-       <bool>true</bool>
-      </property>
-      <property name="acceptDrops">
-       <bool>true</bool>
-      </property>
-      <property name="autoFillBackground">
-       <bool>false</bool>
-      </property>
-      <property name="minimum">
-       <number>18</number>
-      </property>
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="invertedControls">
-       <bool>false</bool>
-      </property>
-      <property name="tickPosition">
-       <enum>QSlider::NoTicks</enum>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
-  <widget class="QLabel" name="label_2">
+  <widget class="QLabel" name="PrefLabel">
    <property name="geometry">
     <rect>
      <x>140</x>
-     <y>400</y>
+     <y>410</y>
      <width>261</width>
      <height>41</height>
     </rect>
@@ -393,35 +297,35 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>450</y>
+     <y>460</y>
      <width>361</width>
      <height>41</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_12">
     <item>
-     <widget class="QLabel" name="label_3">
+     <widget class="QLabel" name="GenderStranger">
       <property name="text">
        <string>Gender</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QRadioButton" name="radioButton_4">
+     <widget class="QRadioButton" name="MaleStranger">
       <property name="text">
        <string>Male</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QRadioButton" name="radioButton_5">
+     <widget class="QRadioButton" name="FemaleStranger">
       <property name="text">
        <string>Female</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QRadioButton" name="radioButton_6">
+     <widget class="QRadioButton" name="DMStranger">
       <property name="text">
        <string>Doesn't matter</string>
       </property>
@@ -433,21 +337,185 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>300</y>
+     <y>250</y>
      <width>211</width>
-     <height>31</height>
+     <height>41</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_13">
     <item>
-     <widget class="QLabel" name="Career_2">
+     <widget class="QLabel" name="Studying">
       <property name="text">
        <string>Studying</string>
       </property>
      </widget>
     </item>
     <item>
-     <widget class="QLineEdit" name="career_2"/>
+     <widget class="QLineEdit" name="studying"/>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QLabel" name="AgeLabel">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>520</y>
+     <width>61</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Age</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="layoutWidget_13">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>130</y>
+     <width>221</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_14">
+    <item>
+     <widget class="QLabel" name="MyGender">
+      <property name="text">
+       <string>Gender</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QRadioButton" name="BtnMaleMe">
+      <property name="text">
+       <string>Male</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QRadioButton" name="BtFemaleMe">
+      <property name="text">
+       <string>Female</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="layoutWidget_5">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>290</y>
+     <width>251</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_11">
+    <item>
+     <widget class="QLabel" name="LifestyleLabel">
+      <property name="text">
+       <string>Lifestyle</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="BtnChooseLifestyle">
+      <property name="text">
+       <string>Choose</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>520</y>
+     <width>151</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_2">
+    <item>
+     <widget class="QLabel" name="MinAge">
+      <property name="text">
+       <string>Minimum</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLineEdit" name="minage"/>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>240</x>
+     <y>520</y>
+     <width>151</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_3">
+    <item>
+     <widget class="QLabel" name="MaxAge">
+      <property name="text">
+       <string>Maximum</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLineEdit" name="maxage"/>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>570</y>
+     <width>211</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_4">
+    <item>
+     <widget class="QLabel" name="FoundRadius">
+      <property name="text">
+       <string>Foundation radius</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLineEdit" name="foundationradius"/>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>370</y>
+     <width>211</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_6">
+    <item>
+     <widget class="QLabel" name="Location">
+      <property name="text">
+       <string>Location</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="BtnChooseLocation">
+      <property name="text">
+       <string>Choose</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
