--- a/HobbyHub/greetingpage.ui
+++ b/HobbyHub/greetingpage.ui
@@ -6,177 +6,130 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>650</width>
-    <height>700</height>
+    <width>400</width>
+    <height>500</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>GreetingPage</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="BtnRegister">
-    <property name="geometry">
-     <rect>
-      <x>230</x>
-      <y>520</y>
-      <width>190</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Register</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="RegLabel">
-    <property name="geometry">
-     <rect>
-      <x>230</x>
-      <y>480</y>
-      <width>291</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Don't have an account? Let's register!</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="BtnLogIn">
-    <property name="geometry">
-     <rect>
-      <x>260</x>
-      <y>320</y>
-      <width>141</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Log in</string>
-    </property>
-   </widget>
-   <widget class="QWidget" name="">
-    <property name="geometry">
-     <rect>
-      <x>210</x>
-      <y>130</y>
-      <width>281</width>
-      <height>91</height>
-     </rect>
-    </property>
-    <layout class="QFormLayout" name="formLayout">
-     <item row="0" column="0" colspan="2">
-      <widget class="QLabel" name="Greeting">
-       <property name="text">
-        <string>Welcome to the HobbyHub, my friend!</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0" colspan="2">
-      <widget class="QLabel" name="Label">
-       <property name="text">
-        <string>Let's meet new people</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0" colspan="2">
-      <widget class="QLabel" name="CheckAccount">
-       <property name="text">
-        <string>Already have an account?</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
-   <widget class="QWidget" name="">
-    <property name="geometry">
-     <rect>
-      <x>220</x>
-      <y>240</y>
-      <width>211</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <layout class="QHBoxLayout" name="horizontalLayout_4">
-     <item>
-      <widget class="QLabel" name="Login">
-       <property name="text">
-        <string>login</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="login"/>
-     </item>
-    </layout>
-   </widget>
-   <widget class="QWidget" name="">
-    <property name="geometry">
-     <rect>
-      <x>220</x>
-      <y>280</y>
-      <width>211</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <layout class="QHBoxLayout" name="horizontalLayout_5">
-     <item>
-      <widget class="QLabel" name="Password">
-       <property name="text">
-        <string>password</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="password">
-       <property name="echoMode">
-        <enum>QLineEdit::Password</enum>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
-   <widget class="QLabel" name="forgotlabel">
-    <property name="geometry">
-     <rect>
-      <x>210</x>
-      <y>390</y>
-      <width>151</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Forgot password?</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="BtnForgottenPass">
-    <property name="geometry">
-     <rect>
-      <x>360</x>
-      <y>390</y>
-      <width>111</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Forgot</string>
-    </property>
-   </widget>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QLabel" name="Greeting">
+      <property name="text">
+       <string>Welcome to the HobbyHub, my friend!</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="Label">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="text">
+       <string>Let's meet new people</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="CheckAccount">
+      <property name="text">
+       <string>Already have an account?</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_4">
+      <item>
+       <widget class="QLabel" name="Login">
+        <property name="text">
+         <string>login</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="login"/>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout_5">
+      <item>
+       <widget class="QLabel" name="Password">
+        <property name="text">
+         <string>password</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="password">
+        <property name="echoMode">
+         <enum>QLineEdit::Password</enum>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item>
+     <widget class="QPushButton" name="BtnLogIn">
+      <property name="text">
+       <string>Log in</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="forgotlabel">
+      <property name="text">
+       <string>Forgot password?</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="BtnForgottenPass">
+      <property name="text">
+       <string>Forgot</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="RegLabel">
+      <property name="text">
+       <string>Don't have an account? Let's register!</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="BtnRegister">
+      <property name="text">
+       <string>Register</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
    <zorder>layoutWidget</zorder>
-   <zorder>CheckAccount</zorder>
-   <zorder>Label</zorder>
+   <zorder>forgotlabel</zorder>
    <zorder>layoutWidget</zorder>
    <zorder>RegLabel</zorder>
    <zorder>BtnLogIn</zorder>
+   <zorder>BtnRegister</zorder>
+   <zorder>BtnForgottenPass</zorder>
+   <zorder>CheckAccount</zorder>
    <zorder>Greeting</zorder>
-   <zorder>layoutWidget_2</zorder>
-   <zorder>BtnRegister</zorder>
-   <zorder>BtnRegister</zorder>
+   <zorder>Label</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>650</width>
+     <width>400</width>
      <height>21</height>
     </rect>
    </property>
