--- a/HobbyHub/meetingpage.ui
+++ b/HobbyHub/meetingpage.ui
@@ -30,7 +30,7 @@
    <property name="geometry">
     <rect>
      <x>250</x>
-     <y>600</y>
+     <y>630</y>
      <width>151</width>
      <height>41</height>
     </rect>
@@ -39,21 +39,11 @@
     <string>Back to my account</string>
    </property>
   </widget>
-  <widget class="QGraphicsView" name="PhotoOfStranger">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>70</y>
-     <width>281</width>
-     <height>361</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QPushButton" name="Dislike">
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>510</y>
+     <y>570</y>
      <width>91</width>
      <height>31</height>
     </rect>
@@ -66,7 +56,7 @@
    <property name="geometry">
     <rect>
      <x>280</x>
-     <y>510</y>
+     <y>570</y>
      <width>91</width>
      <height>31</height>
     </rect>
@@ -79,12 +69,12 @@
    <property name="geometry">
     <rect>
      <x>410</x>
-     <y>190</y>
-     <width>151</width>
-     <height>81</height>
+     <y>320</y>
+     <width>201</width>
+     <height>101</height>
     </rect>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout">
+   <layout class="QHBoxLayout" name="horizontalLayout_4">
     <item>
      <widget class="QLabel" name="Info">
       <property name="text">
@@ -104,9 +94,9 @@
   <widget class="QWidget" name="layoutWidget_2">
    <property name="geometry">
     <rect>
-     <x>410</x>
-     <y>150</y>
-     <width>151</width>
+     <x>40</x>
+     <y>140</y>
+     <width>181</width>
      <height>31</height>
     </rect>
    </property>
@@ -131,7 +121,7 @@
    <property name="geometry">
     <rect>
      <x>400</x>
-     <y>510</y>
+     <y>570</y>
      <width>91</width>
      <height>31</height>
     </rect>
@@ -143,9 +133,9 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>410</x>
-     <y>70</y>
-     <width>151</width>
+     <x>40</x>
+     <y>60</y>
+     <width>181</width>
      <height>31</height>
     </rect>
    </property>
@@ -170,12 +160,12 @@
    <property name="geometry">
     <rect>
      <x>410</x>
-     <y>280</y>
-     <width>151</width>
-     <height>121</height>
+     <y>420</y>
+     <width>201</width>
+     <height>111</height>
     </rect>
    </property>
-   <layout class="QVBoxLayout" name="verticalLayout_2">
+   <layout class="QHBoxLayout" name="horizontalLayout_5">
     <item>
      <widget class="QLabel" name="Interests">
       <property name="text">
@@ -192,12 +182,210 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="layoutWidget_3">
+  <widget class="QWidget" name="layoutWidget_4">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>180</y>
+     <width>181</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_6">
+    <item>
+     <widget class="QLabel" name="City_3">
+      <property name="text">
+       <string>Gender</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="city_2">
+      <property name="text">
+       <string>&lt;gender&gt;</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="layoutWidget_5">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>220</y>
+     <width>181</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_7">
+    <item>
+     <widget class="QLabel" name="City_4">
+      <property name="text">
+       <string>Studying</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="city_3">
+      <property name="text">
+       <string>&lt;studying&gt;</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="layoutWidget_6">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>260</y>
+     <width>181</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout_8">
+    <item>
+     <widget class="QLabel" name="City_5">
+      <property name="text">
+       <string>Career</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="city_4">
+      <property name="text">
+       <string>&lt;career&gt;</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="layoutWidget_7">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>320</y>
+     <width>341</width>
+     <height>211</height>
+    </rect>
+   </property>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="1">
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>bad</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="1">
+     <widget class="QLabel" name="label_6">
+      <property name="text">
+       <string>good</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="LabelMainInLife">
+      <property name="text">
+       <string>The main things in life:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="LabelMainInHuman">
+      <property name="text">
+       <string>The main things in human:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="1">
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>good</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="LabelWorldview">
+      <property name="text">
+       <string>Worldview:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <widget class="QLabel" name="label_4">
+      <property name="text">
+       <string>money</string>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="0">
+     <widget class="QLabel" name="LabeZodiac">
+      <property name="text">
+       <string>Zodiac sign:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1">
+     <widget class="QLabel" name="label_5">
+      <property name="text">
+       <string>money</string>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="1">
+     <widget class="QLabel" name="label_7">
+      <property name="text">
+       <string>taurus</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="0">
+     <widget class="QLabel" name="LabelAlco">
+      <property name="text">
+       <string>Attitude to alcohol:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="0">
+     <widget class="QLabel" name="LabelSmoking">
+      <property name="text">
+       <string>Attitude to smoking:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QLabel" name="label_3">
+      <property name="text">
+       <string>communism</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <widget class="QLabel" name="LabelPolitics">
+      <property name="text">
+       <string>Attitude to politics:</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QGraphicsView" name="PhotoOfStranger">
    <property name="geometry">
     <rect>
      <x>410</x>
-     <y>110</y>
-     <width>151</width>
+     <y>60</y>
+     <width>201</width>
+     <height>231</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>100</y>
+     <width>181</width>
      <height>31</height>
     </rect>
    </property>
